Adicionado: Aula 05. Alterado: Aula 01.

--- a/Aula_01.ipynb
+++ b/Aula_01.ipynb
@@ -278,6 +278,8 @@
     "\n",
     "- **É possível programar com o Paradígma da Orientação a Objetos:** Sim, o Python também possui Orientação a Objetos (OO), e com ele, todas as suas características: Herança, Abstração, Polimorfismo e Encapsulamento.\n",
     "\n",
+    "- **É sensitive case:** Isso significa que letras maiúsculas são diferentes das letras minúsculas.\n",
+    "\n",
     "- **Possui um número absurdo de bibliotecas:** Por padrão, o Python possui a **Standard Library**, com muitas funções extremamente úteis. Porém, é possível introduzir no código-fonte outras bibliotecas externas aumentando, e muito, o poder da linguagem. Algumas delas são voltadas para construção de gráficos, outras para Ciência de Dados, outras para Inteligência Artificial, outras para construção de Interface Gráfica, outras para acesso aos comandos dos Sistemas Operacionais, e por aí vai."
    ]
   },
