Adicionados: Aulas 06, 07 e 08. Corrigidos: Aulas 02, 03, 04 e 05.

--- a/Aula_03.ipynb
+++ b/Aula_03.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apesar de ter menos recursos nativos que o PyCharm, principal IDE para Python no mercado, o VSCode permite uma grande liberdade na hora da configuração do ambiente. Isto, aliado à gigantesca quantidade de _plug-ins_ disponíveis para o editor, permite um altíssimo nível de personalização do programa, fazendo com que o desenvolvedor deixe o software com a \"sua cara\". Além disso, podemos adicionar tantos recursos através dos plug-ins que no final o nosso VSCode terá tantos ou até mesmo mais recursos que a versão paga e mais completa do PyCharm. Isso tudo sem tirar um único centavo do bolso."
+    "Apesar de ter menos recursos nativos que o PyCharm, principal IDE para Python no mercado, o VSCode permite uma grande liberdade na hora da configuração do ambiente. Isto, aliado à gigantesca quantidade de _plug-ins_ disponíveis para o editor, permite um altíssimo nível de personalização do programa, fazendo com que o desenvolvedor deixe o software com a \"sua cara\". Além disso, podemos adicionar tantos recursos através dos plug-ins que no final o nosso VSCode terá tantos ou até mesmo mais recursos que a versão paga e mais completa do PyCharm. Isso tudo sem tirar um único centavo do bolso. Por esses motivos e também por outros que o VSCode é o **programa de desenvolvimento mais usado no mundo**. Tanto comparando com Editores de textos como IDEs."
    ]
   },
   {
@@ -341,6 +341,70 @@
     "5. Aproveite e instale também um tema do VSCode à sua escolha, para uma melhor personalização.\n",
     "\n",
     "#### **Após essa configuração, seu computador finalmente vai estar preparado para codificar em Python!!!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercícios\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Qual programa iremos utilizar para desenvolver códigos Python?\n",
+    "\n",
+    "<form>\n",
+    "    <input type=\"radio\" name=\"1\" unchecked /><span>VSCode</span><br />\n",
+    "    <input type=\"radio\" name=\"1\" unchecked /><span>Python</span><br />\n",
+    "    <input type=\"radio\" name=\"1\" unchecked /><span>Git</span><br />\n",
+    "    <input type=\"radio\" name=\"1\" unchecked /><span>Visual Studio IDE</span><br />\n",
+    "</form>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Qual a função do Git?\n",
+    "\n",
+    "<form>\n",
+    "    <input type=\"radio\" name=\"2\" unchecked /><span>Desenvolver códigos Python</span><br />\n",
+    "    <input type=\"radio\" name=\"2\" unchecked /><span>Versionar códigos</span><br />\n",
+    "    <input type=\"radio\" name=\"2\" unchecked /><span>Executar códgios</span><br />\n",
+    "    <input type=\"radio\" name=\"2\" unchecked /><span>Preparar uma Receita de Bolo</span><br />\n",
+    "</form>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Qual a extensão de um arquivo Python?\n",
+    "\n",
+    "<form>\n",
+    "    <input type=\"radio\" name=\"3\" unchecked /><span>.java</span><br />\n",
+    "    <input type=\"radio\" name=\"3\" unchecked /><span>.python</span><br />\n",
+    "    <input type=\"radio\" name=\"3\" unchecked /><span>.py</span><br />\n",
+    "    <input type=\"radio\" name=\"3\" unchecked /><span>.exe</span><br />\n",
+    "</form>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Marque abaixo o nome das extensões necessárias para codificação Python no VSCode:\n",
+    "\n",
+    "<form>\n",
+    "    <input type=\"checkbox\" name=\"4\" unchecked /><span>Python</span><br />\n",
+    "    <input type=\"checkbox\" name=\"4\" unchecked /><span>Live Server</span><br />\n",
+    "    <input type=\"checkbox\" name=\"4\" unchecked /><span>Synthwave 84 Theme</span><br />\n",
+    "    <input type=\"checkbox\" name=\"4\" unchecked /><span>Jupyter</span><br />\n",
+    "</form>"
    ]
   }
  ],
