--- a/Aula_04.ipynb
+++ b/Aula_04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Aula 04 - Configurando e rodando o primeiro Projeto Python**\n",
+    "# **Aula 04 - Rodando o primeiro Projeto Python**\n",
     "---"
    ]
   },
