--- a/Aula_09.ipynb
+++ b/Aula_09.ipynb
@@ -192,6 +192,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pesquisando dados em uma lista\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poss usar algoritmos de pesquisa para encontrar um determinado valor em uma lista. O recurso é útil para verificar se um determinado valor existe ou não em uma lista.\n",
+    "\n",
+    "### Forma 1: operador in\n",
+    "\n",
+    "Podemos fazer um `if` econjunto com o operador `in` para encontrar um valor em uma lista:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joana\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "nome = input('Informe o nome que deseja encontrar: ')\n",
+    "\n",
+    "# busca o nome desejado\n",
+    "if nome in nomes_lista:\n",
+    "    print(nome)\n",
+    "else:\n",
+    "    print(f'{nome} não encontrado.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forma 2: index\n",
+    "\n",
+    "Outro método bastante utilizado para buscar elementos em uma lista é o método “index”. Esse método retorna o índice do primeiro elemento encontrado na lista que corresponde ao valor buscado:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cicrano encontrado no índice 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "nome = input('Informe o nome que deseja encontrar: ')\n",
+    "\n",
+    "# procura pelo índice através do valor\n",
+    "indice = nomes_lista.index(nome)\n",
+    "\n",
+    "# retorna resultado\n",
+    "try:\n",
+    "    print(f'{nome} encontrado no índice {indice}.')\n",
+    "except:\n",
+    "    print(f'{nome} não encontrado.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forma 3: count\n",
+    "\n",
+    "O Python também oferece a função “count” para contar a quantidade de ocorrências de um determinado elemento em uma lista:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fulano foi encontrado na lista 2 vezes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Fulano']\n",
+    "nome = input('Informe o nome que deseja encontrar: ')\n",
+    "\n",
+    "# conta a quantidade de vezes que o valor foi encontrado\n",
+    "quantidade = nomes_lista.count(nome)\n",
+    "\n",
+    "# retorna resultado\n",
+    "try:\n",
+    "    print(f'{nome} foi encontrado na lista {quantidade} vezes.')\n",
+    "except:\n",
+    "    print(f'{nome} não foi encontrado.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inserindo dados em uma lista\n",
     "---"
    ]
@@ -380,6 +495,21 @@
     "# exibe a nova lista\n",
     "for nome in nomes_lista:\n",
     "    print(nome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercícios\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Crie um programa que possa incluir, pesquisar, alterar e excluir nomes em uma lista, que pode ter quantos nomes o usuário desejar."
    ]
   }
  ],
