Adicionado: Aulas 10 e 11. Modificado: Aula 09.

--- a/Aula_09.ipynb
+++ b/Aula_09.ipynb
@@ -192,6 +192,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ordenando dados da lista\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É possível ordenar os dados da lista, tanto em ordem crescente (no caso dos números) como em ordem alfabética (no caso de textos) através da função `sort()`, como veremos no código-fonte abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beltrano\n",
+      "Cicrano\n",
+      "Fulano\n",
+      "Joana\n",
+      "Maria\n",
+      "Mariana\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "\n",
+    "# ordena os dados da lista\n",
+    "nomes_lista.sort()\n",
+    "\n",
+    "for nome in nomes_lista:\n",
+    "    print(nome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pesquisando dados em uma lista\n",
     "---"
    ]
@@ -301,6 +344,81 @@
     "    print(f'{nome} foi encontrado na lista {quantidade} vezes.')\n",
     "except:\n",
     "    print(f'{nome} não foi encontrado.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alterando dados de uma lista\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma vez que você pode consultar e acessar os dados de uma lista, pode facilmente alterar seu valor. No exemplo abaixo, vamos alterar o primeiro nome da lista. Para isso, precisaremos apenas saber e acessar exatamente o seu índice:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex\n",
+      "Cicrano\n",
+      "Beltrano\n",
+      "Joana\n",
+      "Maria\n",
+      "Fulano\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Fulano']\n",
+    "nomes_lista[0] = 'Alex'\n",
+    "\n",
+    "for nome in nomes_lista:\n",
+    "    print(nome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mas se não souber, pode fazer uma pesquisa pelo nome e pedir para retornar seu índice, como no exemplo abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fulano\n",
+      "Alex\n",
+      "Beltrano\n",
+      "Joana\n",
+      "Maria\n",
+      "Fulano\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Fulano']\n",
+    "nome_a_alterar = input('Informe o nome que deseja alterar: ')\n",
+    "nomes_lista[nomes_lista.index(nome_a_alterar)] = input('Informe o novo nome: ')\n",
+    "\n",
+    "for nome in nomes_lista:\n",
+    "    print(nome)"
    ]
   },
   {
@@ -495,6 +613,170 @@
     "# exibe a nova lista\n",
     "for nome in nomes_lista:\n",
     "    print(nome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Serapando item da lista em uma variável\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se por acaso precisar isolar especificamente um item da lista, também é perfeitamente possível através da função `pop()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fulano\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "indice = int(input('Informe o número do índice do elemento que deseja separar da lista: '))\n",
+    "indice -= 1\n",
+    "\n",
+    "# tenta separar o nome da lista\n",
+    "try:\n",
+    "    nome_separado = nomes_lista.pop(indice)\n",
+    "except:\n",
+    "    print('Não foi possível separar.')\n",
+    "\n",
+    "print(nome_separado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se preferir, pode fazer uma procura pelo valor e retornar um índice para separar o valor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maria\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "nome_a_separar = input('Informe o nome que deseja separar da lista: ')\n",
+    "\n",
+    "try:\n",
+    "    nome_separado = nomes_lista.pop(nomes_lista.index(nome_a_separar))\n",
+    "except:\n",
+    "    print('Não foi possível separar.')\n",
+    "\n",
+    "print(nome_separado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Join\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dependendo do tipo de operação que precisar fazer, pode haver a necessidade de juntar os valores de uma lista em uma única variável. Caso haja essa necessidade, você pode fazer uso da função `join()`, conforme demonstrado abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fulano,Cicrano,Beltrano,Joana,Maria,Mariana\n"
+     ]
+    }
+   ],
+   "source": [
+    "nomes_lista = ['Fulano', 'Cicrano', 'Beltrano', 'Joana', 'Maria', 'Mariana']\n",
+    "\n",
+    "# insere um separador\n",
+    "separador = ','\n",
+    "\n",
+    "# junta os nomes em uma única variável\n",
+    "nomes_string = separador.join(nomes_lista)\n",
+    "\n",
+    "print(nomes_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função `split()` faz exatamente o contrário do `join()`, ou seja, pega os valores de uma variável e separa em elementos diferentes de uma lista:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Janeiro\n",
+      "Fevereiro\n",
+      "Março\n",
+      "Abril\n",
+      "Maio\n",
+      "Junho\n",
+      "Julho\n",
+      "Agosto\n",
+      "Setembro\n",
+      "Outubro\n",
+      "Novembro\n",
+      "Dezembro\n"
+     ]
+    }
+   ],
+   "source": [
+    "meses_string = 'Janeiro Fevereiro Março Abril Maio Junho Julho Agosto Setembro Outubro Novembro Dezembro'\n",
+    "\n",
+    "# insere o separador para separar os valores e os insere em uma lista\n",
+    "meses_lista = meses_string.split(' ')\n",
+    "\n",
+    "# exibe a lista\n",
+    "for mes in meses_lista:\n",
+    "    print(mes)"
    ]
   },
   {
