--- a/Aula_09.ipynb
+++ b/Aula_09.ipynb
@@ -783,6 +783,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lista numérica\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É possível também montar uma lista com números, não só com strings. Veja o exemplo abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista numérica\n",
+    "numeros = [1, 2, 3, 4, 5]\n",
+    "print(numeros)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A vantagem de montar uma lista numérica são algumas operações a mais que podem ser feitas.\n",
+    "\n",
+    "### Soma dos números de uma lista\n",
+    "\n",
+    "Um exemplo de uma operação que pode ser feita com números de uma lista é uma soma. Veja o exemplo abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# soma os números da lista\n",
+    "print(sum(numeros))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordem crescente e decrescente\n",
+    "\n",
+    "Também é possível fazer uma ordenação dos números, tanto em ordem crescente quanto em ordem decresccente. Veja no código abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [1,3,2,6,4,5]\n",
+    "\n",
+    "# imprime em ordem crescente\n",
+    "numeros.sort()\n",
+    "print(numeros)\n",
+    "\n",
+    "# imprime em ordem decrescente\n",
+    "numeros.sort(reverse=True)\n",
+    "print(numeros)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercícios\n",
     "---"
    ]
@@ -791,7 +891,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Crie um programa que possa incluir, pesquisar, alterar e excluir nomes em uma lista, que pode ter quantos nomes o usuário desejar."
+    "### 1. Crie um programa que possa incluir, pesquisar, alterar e excluir nomes em uma lista, que pode ter quantos nomes o usuário desejar.\n",
+    "### 2. Crie um programa que o usuário possa digitar quantos números digitar, e ao terminar, imprima os números em ordem crescente.\n",
+    "### 3. Crie um programa que o usuário possa digitar uma quantidade desejada de notas de um determinado aluno (nota mínima 0 e nota máxima 10), e o programa calcula a média desse aluno, e ao final informe se o aluno está aprovado ou reprovado (média mínima para aprovação = 7)."
    ]
   }
  ],
