--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -54,6 +54,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Diferenciando os tipos de coleções\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assim como os tipos de variáveis, você pode exibir qual tipo de lista você está lidando através do comando `type()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# coleções\n",
+    "colecao1 = ['Fulano','Cicrano','Beltrano']\n",
+    "colecao2 = ('Brasília','São Paulo','Rio de Janeiro')\n",
+    "colecao3 = {'Nome':'Fulano de Tal', 'Profissao':'Programador', 'Genero':'Masculino'}\n",
+    "\n",
+    "# verificando os tipos de coleções\n",
+    "print(type(colecao1))\n",
+    "print(type(colecao2))\n",
+    "print(type(colecao3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Acessando os dados do dicionário\n",
     "---"
    ]
