--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -392,6 +392,58 @@
     "# exibe os novos dados na tela\n",
     "print(pessoa)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lista de dicionários\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É possível também montar uma lista de dicionários. Dessa forma, é possível montar um mini-banco de dados não-relacional."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'nome': 'Fulano', 'idade': 20, 'profissao': 'programador'}, {'nome': 'Cicrano', 'idade': 25, 'profissao': 'cientista'}, {'nome': 'Beltrano', 'idade': 30, 'profissao': 'gerente de projetos'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista de dicionários\n",
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# imprimindo a lista\n",
+    "print(pessoas)"
+   ]
   }
  ],
  "metadata": {
