--- a/Aula_03.ipynb
+++ b/Aula_03.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "1. Abra o **Terminal** do seu SO. Se for Windows, é o **Prompt de Comando**. Isso pode ser feito no Windows usando a tecla de atalho **Ctrl+R** e digitando `cmd` na caixa de diálogo.\n",
-    "2. No terminal ou prompt de comando, digite `python --version`."
+    "2. No terminal ou prompt de comando, digite `python --version` (dois hífens) ou `python -V` (um hífen e \"V\" maiúsculo). Ambos os comandos funcionam."
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalando o Python\n",
+    "## Instalando o Python (caso não tenha instalado)\n",
     "---"
    ]
   },
@@ -148,6 +148,50 @@
     "5. Prossiga com a instalação normalmente até finalizar, e o Python estará instalado com sucesso.\n",
     "\n",
     "**Obs:** a instalação do Python é importante para os próximos passos, e embora seja possível instalar o Python depois, é mais interessante começar as instalações dos programas por ele. Outro ponto importante a se ressaltar, é que no caso dos devs que usam Linux, o Python já vem instalado por padrão. Talvez a única coisa necessária a se fazer nesse caso é atualizar o Python. Siga as instruções do site para realizar a atualização."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atualizando o Python (caso já tenha instalado mas precise atualizar)\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É claro que dá para ir no site do Python, baixar uma versão mais recente e instalar, mas esse processo pode ser feito pelo terminal também.\n",
+    "\n",
+    "### E por que atualizaríamos o Python?\n",
+    "\n",
+    "#### Segurança\n",
+    "\n",
+    "Manter o Python atualizado é essencial para garantir a segurança do seu sistema. As atualizações regulares incluem correções de segurança que protegem contra vulnerabilidades conhecidas. Ao atualizar o Python pelo terminal, você garante que está utilizando a versão mais recente e segura da linguagem.\n",
+    "\n",
+    "#### Correção de bugs\n",
+    "\n",
+    "Assim como em qualquer software, o Python também pode conter bugs. As atualizações fornecem correções para esses bugs, melhorando a estabilidade e o desempenho do Python. Ao atualizar pelo terminal, você pode corrigir problemas conhecidos e aproveitar as melhorias implementadas nas versões mais recentes.\n",
+    "\n",
+    "#### Novos recursos\n",
+    "\n",
+    "Uma das vantagens de atualizar o Python pelo terminal é ter acesso aos novos recursos e funcionalidades adicionados nas versões mais recentes. As atualizações trazem melhorias significativas para a linguagem, como suporte a bibliotecas atualizadas, melhor desempenho e novas sintaxes. Manter-se atualizado permite que você aproveite esses recursos e mantenha-se atualizado com as tendências do Python.\n",
+    "\n",
+    "### Como atualizar o Python pelo terminal?\n",
+    "\n",
+    "1. Abra o terminal/prompt de comando.\n",
+    "2. No Windows, o comando de atualização do Python é `python -m pip install –upgrade python`.\n",
+    "3. Aguarde a instalação finalizar.\n",
+    "4. Verifique novamente a versão do Python instalada.\n",
+    "\n",
+    "#### Como atualizar o Python no Linux\n",
+    "\n",
+    "1. Siga o tutorial nesse site: https://awari.com.br/como-atualizar-o-python-no-linux-guia-completo-e-pratico-2/\n",
+    "\n",
+    "### Fonte\n",
+    "\n",
+    "- https://awari.com.br/python-como-atualizar-pelo-terminal/"
    ]
   },
   {
