--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -444,6 +444,113 @@
     "# imprimindo a lista\n",
     "print(pessoas)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exibindo os dados de apenas uma das chaves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fulano\n",
+      "Cicrano\n",
+      "Beltrano\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# listando apenas os nomes\n",
+    "for pessoa in pessoas:\n",
+    "    print(pessoa['nome'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exibindo todos os dados de todos da lista de forma organizada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 1:\n",
+      "Nome: Fulano\n",
+      "Idade: 20\n",
+      "Profissão: programador\n",
+      "\n",
+      "ID: 2:\n",
+      "Nome: Cicrano\n",
+      "Idade: 25\n",
+      "Profissão: cientista\n",
+      "\n",
+      "ID: 3:\n",
+      "Nome: Beltrano\n",
+      "Idade: 30\n",
+      "Profissão: gerente de projetos\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# listando como um banco de dados\n",
+    "for i in range(len(pessoas)):\n",
+    "    print(f'ID: {i + 1}:')\n",
+    "    print(f'Nome: {pessoas[i]['nome']}')\n",
+    "    print(f'Idade: {pessoas[i]['idade']}')\n",
+    "    print(f'Profissão: {pessoas[i]['profissao']}\\n')"
+   ]
   }
  ],
  "metadata": {
