--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -500,24 +500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID: 1:\n",
+      "Índice: 1:\n",
       "Nome: Fulano\n",
       "Idade: 20\n",
       "Profissão: programador\n",
       "\n",
-      "ID: 2:\n",
+      "Índice: 2:\n",
       "Nome: Cicrano\n",
       "Idade: 25\n",
       "Profissão: cientista\n",
       "\n",
-      "ID: 3:\n",
+      "Índice: 3:\n",
       "Nome: Beltrano\n",
       "Idade: 30\n",
       "Profissão: gerente de projetos\n",
@@ -546,7 +546,265 @@
     "\n",
     "# listando como um banco de dados\n",
     "for i in range(len(pessoas)):\n",
-    "    print(f'ID: {i + 1}:')\n",
+    "    print(f'Índice: {i + 1}:')\n",
+    "    print(f'Nome: {pessoas[i]['nome']}')\n",
+    "    print(f'Idade: {pessoas[i]['idade']}')\n",
+    "    print(f'Profissão: {pessoas[i]['profissao']}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pesquisando por um dicionário dentro de uma lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índice: 1\n",
+      "Nome: Fulano\n",
+      "Idade: 20\n",
+      "Profissão: programador\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# usuário informa o nome que deseja procurar\n",
+    "nome = input('Informe o nome que deseja procurar: ')\n",
+    "\n",
+    "# programa retorna o resultado\n",
+    "for i in range(len(pessoas)):\n",
+    "    if nome in pessoas[i]['nome']:\n",
+    "        print(f'Índice: {i + 1}')\n",
+    "        print(f'Nome: {pessoas[i]['nome']}')\n",
+    "        print(f'Idade: {pessoas[i]['idade']}')\n",
+    "        print(f'Profissão: {pessoas[i]['profissao']}')\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alterando dados de um dicionário dentro de uma lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Novos dados do índice 1:\n",
+      "\n",
+      "Nome: Fulano\n",
+      "Idade: 20\n",
+      "Profissão: atendente\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "indice = int(input('Informe o índice a ser alterado: '))\n",
+    "campo = input('Informe o nome do campo a ser alterado: ')\n",
+    "\n",
+    "indice -= 1\n",
+    "\n",
+    "# usuário altera o dado do campo desejado\n",
+    "try:\n",
+    "    pessoas[indice][campo] = input(f'Informe o novo valor do campo {campo}: ')\n",
+    "except:\n",
+    "    print('Não foi possível alterar.')\n",
+    "\n",
+    "# novos dados são exibidos na lista\n",
+    "print(f'Novos dados do índice {indice + 1}:\\n')\n",
+    "print(f'Nome: {pessoas[indice]['nome']}')\n",
+    "print(f'Idade: {pessoas[indice]['idade']}')\n",
+    "print(f'Profissão: {pessoas[indice]['profissao']}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inserindo um novo dicionário da lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índice: 1:\n",
+      "Nome: Fulano\n",
+      "Idade: 20\n",
+      "Profissão: programador\n",
+      "\n",
+      "Índice: 2:\n",
+      "Nome: Cicrano\n",
+      "Idade: 25\n",
+      "Profissão: cientista\n",
+      "\n",
+      "Índice: 3:\n",
+      "Nome: Beltrano\n",
+      "Idade: 30\n",
+      "Profissão: gerente de projetos\n",
+      "\n",
+      "Índice: 4:\n",
+      "Nome: Alex\n",
+      "Idade: 39\n",
+      "Profissão: programador\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# usuário informa os dados a serem inseridos\n",
+    "pessoa['nome'] = input('Informe o nome: ')\n",
+    "pessoa['idade'] = int(input('Informe a idade: '))\n",
+    "pessoa['profissao'] = input('Informe a profissão: ')\n",
+    "\n",
+    "# novos dados são inseridos\n",
+    "pessoas.append(pessoa)\n",
+    "\n",
+    "# novos dados exibidos na lista\n",
+    "for i in range(len(pessoas)):\n",
+    "    print(f'Índice: {i + 1}:')\n",
+    "    print(f'Nome: {pessoas[i]['nome']}')\n",
+    "    print(f'Idade: {pessoas[i]['idade']}')\n",
+    "    print(f'Profissão: {pessoas[i]['profissao']}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deletando um dicionário da lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índice: 1:\n",
+      "Nome: Cicrano\n",
+      "Idade: 25\n",
+      "Profissão: cientista\n",
+      "\n",
+      "Índice: 2:\n",
+      "Nome: Beltrano\n",
+      "Idade: 30\n",
+      "Profissão: gerente de projetos\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoas = [\n",
+    "    {\n",
+    "        'nome':'Fulano',\n",
+    "        'idade':20,\n",
+    "        'profissao':'programador'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Cicrano',\n",
+    "        'idade':25,\n",
+    "        'profissao':'cientista'\n",
+    "    },\n",
+    "    {\n",
+    "        'nome':'Beltrano',\n",
+    "        'idade':30,\n",
+    "        'profissao':'gerente de projetos'\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# usuário informa o índice a ser excluído\n",
+    "indice = int(input('Informe o índice que deseja deletar da lista de dicionários: '))\n",
+    "\n",
+    "indice -= 1\n",
+    "\n",
+    "# índice é deletado\n",
+    "try:\n",
+    "    del[pessoas[indice]]\n",
+    "except:\n",
+    "    print('Não foi possível deletar o índice.')\n",
+    "\n",
+    "# nova lista é exibida\n",
+    "for i in range(len(pessoas)):\n",
+    "    print(f'Índice: {i + 1}:')\n",
     "    print(f'Nome: {pessoas[i]['nome']}')\n",
     "    print(f'Idade: {pessoas[i]['idade']}')\n",
     "    print(f'Profissão: {pessoas[i]['profissao']}\\n')"
