--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -809,6 +809,21 @@
     "    print(f'Idade: {pessoas[i]['idade']}')\n",
     "    print(f'Profissão: {pessoas[i]['profissao']}\\n')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercícios\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Em programação, chamamos de sistema ***CRUD*** um sistema que faça 4 operações: ***C***_reate_, ***R***_ead_, ***U***_pdate_ e ***D***_elete_, que significam, respectivamente: cadastrar, pesquisar, atualizar e excluir. Crie um ***CRUD***, ou seja, um sistema que faça essas 4 operações em uma lista de dicionário."
+   ]
   }
  ],
  "metadata": {
